--- a/package.json
+++ b/package.json
@@ -6,8 +6,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/HakobTigranyan93/Project.git"
+  },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/HakobTigranyan93/Project/issues"
+  },
+  "homepage": "https://github.com/HakobTigranyan93/Project#readme",
   "dependencies": {
     "json-server": "^1.0.0-alpha.23"
   }
