--- a/package.json
+++ b/package.json
@@ -12,11 +12,22 @@
   },
   "author": "",
   "license": "ISC",
+  "browserslist": [
+    ">1%"
+  ],
   "bugs": {
     "url": "https://github.com/HakobTigranyan93/Project/issues"
   },
   "homepage": "https://github.com/HakobTigranyan93/Project#readme",
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "babel-loader": "^9.1.3",
+    "core-js": "^3.36.1",
     "json-server": "^1.0.0-alpha.23"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.24.1",
+    "@babel/core": "^7.24.3",
+    "@babel/preset-env": "^7.24.3"
   }
 }
